tarmac/new_pattern24/kubernetes/platform/observability/kubernetes-dashboard/overlays/environments/devops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: k8s-dashboard
    alb.ingress.kubernetes.io/group.name: k8s-dashboard
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:964608896914:certificate/8f4b2498-b7f7-4d04-8659-fa3a229ca283
    alb.ingress.kubernetes.io/tags: Environment=devops,Team=devops
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-3-2021-06
spec:
  ingressClassName: alb
  rules:
    - host: k8s.devops.cliniciannexus.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  name: http
